# AstrixVPN

./: .gitignore  AGENTS.md  Makefile  README.fa.md  README.md  client_config.example.json  main.py  pyproject.toml  server_config.example.json
apps-script/: Code.gs
astrix-client/: astrix-client.spec  build_exe.py  client_config.example.json  pyproject.toml
astrix-client/astrix_client/: __init__.py  __main__.py  daemon.py
astrix-client/astrix_client/carrier/: __init__.py  client.py  fronting.py
astrix-client/astrix_client/cli/: __init__.py  shell.py
astrix-client/astrix_client/config/: __init__.py  client.py  env.py
astrix-client/astrix_client/crypto/: __init__.py  crypto.py
astrix-client/astrix_client/frame/: __init__.py  frame.py
astrix-client/astrix_client/session/: __init__.py  session.py
astrix-client/astrix_client/socks/: __init__.py  conn.py  server.py
astrix-server/: astrix-server.spec  build_exe.py  pyproject.toml  server_config.example.json
astrix-server/astrix_server/: __init__.py  __main__.py  daemon.py
astrix-server/astrix_server/cli/: shell.py
astrix-server/astrix_server/config/: __init__.py  env.py  server.py
astrix-server/astrix_server/crypto/: __init__.py  crypto.py
astrix-server/astrix_server/exit/: __init__.py  dnscache.py  server.py  stats.py
astrix-server/astrix_server/frame/: __init__.py  frame.py
astrix-server/astrix_server/session/: __init__.py  session.py
deploy/: astrix-client.service  astrix-server.service  install.sh
scripts/: build-all.sh  bump_version.sh  cross-build-win.sh  versioninfo.txt
(+2 files in other folders)
